Updated definition of legalisation

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_uk.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/finland/_uk.govspeak.erb
@@ -31,7 +31,7 @@ Your CNI is valid in Finland for 3 months.
 
 ###Legalisation and translation
 
-You’ll need to get your CNI [legalised](/get-document-legalised) (certified as genuine) by the
+You’ll need to get your CNI [legalised](/get-document-legalised) by the
 Foreign and Commonwealth Office (FCO).
 
 You should also check with the local authority in Finland to find out if you need to provide legalised and translated copies of any other documents.
