--- a/lib/smart_answer_flows/maternity-paternity-calculator/questions/how_many_payments_monthly.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/questions/how_many_payments_monthly.govspeak.erb
@@ -1,10 +1,10 @@
 <% content_for :title do %>
-  How many payments did the employee receive between <%= relevant_period %>?
+  How many months' pay did the employee get between <%= relevant_period %>?
 <% end %>
 
 <% content_for :hint do %>
-  If you have paid the employee 2 month’s pay in one month, count it as 2 payments. 
-  Don't count bonuses or holiday payments on top of paid annual leave.
+  If you have paid the employee 2 months’ pay in one month, count it as 2 payments.
+  Do not include bonuses or other one-off payments.
 <% end %>
 
 <% options(payment_options_monthly) %>
