--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/china/_opposite_sex.govspeak.erb
@@ -14,21 +14,16 @@ This costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_fo
 
 An affidavit is a religious document. If you do not want to swear a religious oath, you can sign an affirmation instead.
 
-s1. Make an appointment to swear your affirmation or affidavit at [the embassy in Beijing](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-beijing/oaths-affirmations-and-affidavits/slot_picker) or the consulate in [Shanghai](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-shanghai/oaths-affirmations-and-affidavits/slot_picker) or [Guangzhou](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-guangzhou/oaths-affirmations-and-affidavits/slot_picker).
-s2. When your appointment is confirmed, download an [affirmation](/government/publications/affirmation-form-china) or [affidavit](/government/publications/affidavit-form-china).
-s3. Fill it in on your computer but do not type in the signature box - you’ll sign it at the embassy.
-s4. Email it to the embassy or consulate where you booked your appointment:
-
-- [consular.beijing@fco.gov.uk](mailto:consular.beijing@fco.gov.uk)
-- [consular.shanghai@fco.gov.uk](mailto:consular.shanghai@fco.gov.uk)
-- [consular.guangzhou@fco.gov.uk](mailto:consular.guangzhou@fco.gov.uk)
-
+s1. Download an [affirmation](/government/publications/affirmation-form-china) or [affidavit](/government/publications/affidavit-form-china).
+s2. Fill it in on your computer - it won't be accepted if it's handwritten.
+s3. Make an appointment to swear your affirmation or affidavit at [the embassy in Beijing](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-beijing/oaths-affirmations-and-affidavits/slot_picker) or the consulate in [Shanghai](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-shanghai/oaths-affirmations-and-affidavits/slot_picker) or [Guangzhou](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-general-guangzhou/oaths-affirmations-and-affidavits/slot_picker).
 
 ^If your partner is British, they’ll need to follow the same process to swear their own affirmation or affidavit.^
 
 You’ll need to bring:
 
 - your passport
+- a printed copy of your completed affirmation or affidavit document
 - proof of your address, for example a tenancy agreement, utility bill or driving licence
 - evidence if you’ve changed your name by deed poll
 - your partner’s Chinese ID card and Hukou (if they’re Chinese)
