--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/basis_of_calculation.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/basis_of_calculation.govspeak.erb
@@ -12,5 +12,6 @@
 ) %>
 
 <% content_for :hint do %>
-  Check the employment contract if you’re not sure about the holiday entitlement.
+  Check the employment contract if you’re not sure. Choose ‘casual or irregular hours’ 
+  for workers who do different hours each week, for example workers on zero-hours contracts.
 <% end %>
