--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/how_many_hours_per_week.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/how_many_hours_per_week.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  If you work half-hours enter .5 for a half, eg 40.5.
+  Include any half-hours, for example 37.5.
 <% end %>
 
 <% content_for :error_message do %>
