--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/how_many_days_per_week_for_hours.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/how_many_days_per_week_for_hours.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  If you work half-days enter .5 for a half, eg 3.5 for three and a half days.
+  We need this to work out how many hours are worked in an average day. Include any half-days, for example 3.5. 
 <% end %>
 
 <% content_for :error_message do %>
