Making it clearer who can't use this branch

--- a/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/annualised_hours.govspeak.erb
+++ b/lib/smart_answer_flows/calculate-your-holiday-entitlement/questions/annualised_hours.govspeak.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :hint do %>
-  This is calculated by excluding statutory entitlement. This calculation isn't suitable for term-time workers.
+  The result will only be accurate if the hours in the worker's contract do not include holiday. Do not use annualised entitlement for term-time workers or zero-hours contracts.
 <% end %>
 
 <% content_for :label do %>
