Add Opposite Sex Civil Partnership To Austria

--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/uk/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/uk/partner_british/_opposite_sex.erb
@@ -1,8 +1,14 @@
-Contact the [Embassy of Austria](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
+You can get married or enter into a civil partnership in Austria. 
+
+Civil partnerships are known as ‘eingetragene Partnerschaft’, or ‘registered partnership’ in Austria. Opposite-sex civil partnerships aren’t recognised in the UK.
+
+Contact the [Embassy of Austria](https://www.gov.uk/government/publications/foreign-embassies-in-the-uk) before making plans to find out about local marriage and civil partnership laws, including what documents you’ll need. 
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Austria](/foreign-travel-advice/austria) before making any plans.
 
-##What you need to do
+##Getting married
+
+###What you need to do
 
 You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
 
@@ -20,6 +26,12 @@ You should also check if it needs to be:
 - translated - [find a translator abroad](/government/collections/list-of-lawyers), or in the UK through the [Institute of Linguists](http://www.ciol.org.uk)
 
 You should also check with the local authorities in Austria to find out if you need to provide legalised and translated copies of any other documents.
+
+##Getting a civil partnership
+
+###What you need to do
+
+To get a CNI for a civil partnership you must [go to Austria and post notice at the embassy or consulate there](https://www.gov.uk/marriage-abroad/y/austria/ceremony_country/partner_british/opposite_sex).
 
 %The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
