--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/_title.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/_title.govspeak.erb
@@ -1,5 +1,5 @@
 <% if calculator.partner_is_same_sex? %>
   Civil partnership and same-sex marriage in Austria
 <% else %>
-  Marriage in Austria
+  Marriage and civil partnership in Austria
 <% end %>
