--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/ceremony_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/ceremony_country/partner_british/_opposite_sex.erb
@@ -1,14 +1,18 @@
-Contact the relevant local authorities in Austria to find out about local marriage laws, including what documents you’ll need.
+You can get married or enter into a civil partnership in Austria.
+
+Civil partnerships are known as ‘eingetragene Partnerschaft’, or ‘registered partnership’ in Austria. Opposite-sex civil partnerships aren’t recognised in the UK.
+
+Contact the relevant local authorities in Austria to find out about local civil partnership and marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) before making any plans.^
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry or enter into a civil partnership or equivalent in Austria.
 
-To get a CNI, you must post notice of your intended marriage in Austria. You can do this at the British embassy or in front of a notary public.
+To get a CNI, you must post notice of your intention to get married or enter into a civil partnership in Austria. You can do this at the British embassy or in front of a notary public.
 
-You’ll need to have been living in Austria for at least 3 full days before you can post notice, for example if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
+You’ll need to have been living in Austria for at least 3 full days before you can post notice. For example, if you arrive in the country on Thursday, the earliest you can post notice is the following Monday.
 
 [Make an appointment at the embassy in Vienna.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-vienna/notice-of-marriage-or-civil-partnership/slot_picker)
 
@@ -18,13 +22,15 @@ You’ll need to provide supporting documents, including:
 - proof of residence, such as a residence certificate - check with the embassy or notary public to find out what you need
 - equivalent documents for your partner
 
-You’ll need to complete a [‘Notice of marriage’](/government/publications/notice-of-marriage-form--2) form and an [‘Affidavit for marriage’](/government/publications/affirmationaffidavit-of-marital-status-form) form.
+To post notice for marriage you'll need to complete a ['Notice of marriage'](https://www.gov.uk/government/publications/notice-of-marriage-form--2) and an ['Affidavit for marriage’](https://www.gov.uk/government/publications/affirmationaffidavit-of-marital-status-form) form.
+
+To post notice for a civil partnership you'll need to complete both the ['declaration' and 'notice of registered partnership' forms](https://www.gov.uk/government/publications/getting-married-in-austria-civil-partnership-forms).
 
 You can download and fill in (but not sign) the forms in advance.
 
 You must take the forms with you to your appointment.
 
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage or civil partnership to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
 
 ^Your partner will need to follow the same process and pay the fees to get their own CNI.^
 
@@ -44,9 +50,9 @@ If you give notice at a notary public, you must post the signed forms and any su
 
 ^The embassy or consulate may charge a fee to return your documents to you.^
 
-The consulate will display your notice of marriage publicly for 7 days.
+The consulate will display your notice of marriage or civil partnership publicly for 7 days.
 
-They’ll then send all of your documentation to the British embassy or consulate nearest to where you’re getting married in Austria, who will issue your CNI (as long as nobody has registered an objection).
+They’ll then issue your CNI (as long as nobody has registered an objection) and send it to the British embassy or consulate nearest to where you’re getting married or having a civil partnership ceremony in Austria.
 
 There’s an additional fee for this - the embassy or consulate will contact you to arrange payment.
 
@@ -66,6 +72,3 @@ You normally have to pay fees for consular services in the local currency - thes
 <%= render partial: 'how_to_pay.govspeak.erb', locals: {calculator: calculator} %>
 
 *[CNI]:certificate of no impediment
-
-
-
