--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/third_country/partner_british/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/austria/third_country/partner_british/_opposite_sex.erb
@@ -1,15 +1,23 @@
-Contact the relevant local authorities in Austria to find out about local marriage laws, including what documents you’ll need.
+You can get married or enter into a civil partnership in Austria. 
+
+Civil partnerships are known as ‘eingetragene Partnerschaft’, or ‘registered partnership’ in Austria. Opposite-sex civil partnerships aren’t recognised in the UK.
+
+Contact the relevant local authorities in Austria to find out about local civil partnership and marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Austria](/foreign-travel-advice/austria) before making any plans.
 
 ##What you need to do
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry or enter into a civil partnership.
 
-There are 2 ways you can get a CNI:
+There are 2 ways you can get a CNI for marriage in Austria:
 
-- [go to the UK and post notice with a UK registrar](/marriage-abroad/y/austria/uk/partner_british/opposite_sex)
-- [go to Austria and post notice at the embassy or consulate there](/marriage-abroad/y/austria/ceremony_country/partner_british/opposite_sex)
++ [go to the UK and post notice with a UK registrar](https://www.gov.uk/marriage-abroad/y/austria/uk/partner_british/opposite_sex)
++ [go to Austria and post notice at the embassy or consulate there](https://www.gov.uk/marriage-abroad/y/austria/ceremony_country/partner_british/opposite_sex)  
+
+To get a CNI for a civil partnership you must:
+
++ [go to Austria and post notice at the embassy or consulate there](https://www.gov.uk/marriage-abroad/y/austria/ceremony_country/partner_british/opposite_sex)
 
 %If you choose to post notice, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
 
