--- a/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_tourism_visa_partner.govspeak.erb
+++ b/lib/smart_answer_flows/check-uk-visa/outcomes/outcome_tourism_visa_partner.govspeak.erb
@@ -9,7 +9,7 @@
 
   In most cases, you should apply for a [Standard Visitor visa](/standard-visitor-visa).
 
-  You should [apply for a ‘Surinder Singh’ EEA family permit](/family-permit/surinder-singh) instead if you've been living with them in an EEA country other than the UK and they've been supporting you.
+  You should [apply for a ‘Surinder Singh’ EEA family permit](/family-permit/surinder-singh) instead if you’ve been living with them in an EEA country other than the UK and they’ve been working, self-employed, self-sufficient or studying there.
 
   ## They’re from elsewhere in the EEA
 
